# MindFlow

./: .gitignore  Dockerfile.backend  README.md  TODO.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 20260420_01_add_article_workbench_state.py  20260423_01_add_provider_ids_for_we_mprss.py  72af35b254e0_initial_migration.py
backend/migrations/: export_sqlite_to_postgres.py
backend/routers/: articles.py  behavior.py  config.py  digests.py  interests.py  now.py  sources.py
backend/services/: ai.py  crawler.py  learning.py  now.py  scheduler.py  we_mprss.py
backend/tests/: mp_refresh_today_flow.py  test_articles.py  test_config.py  test_content_cleaner.py  test_database.py  test_full_flow.py  test_main.py  test_now_api.py  test_sources.py  test_we_mprss_flow.py
docs/: deploy.md  development-history.md  requirements-backlog.md
docs/superpowers/: README.md
docs/superpowers/archive/: 2026-04-09-docker-deployment.md  2026-04-12-mvp-agent-execution-list-v1.md
docs/superpowers/plans/: 2026-04-10-postgres-migration.md  2026-04-20-daily-digest-now-workbench.md  2026-04-21-ui-i18n-bilingual-rollout.md  2026-04-22-plan-draft.md  2026-04-22-sources-we-mprss-auth-ui.md  2026-04-23-backlog-poetry-migration.md  2026-04-23-we-mprss-provider-sync.md
docs/superpowers/progress/: 2026-04-21-daily-digest-now-workbench-progress.md  2026-04-21-ui-i18n-bilingual-rollout-progress.md
docs/superpowers/specs/: 2026-04-09-ai-news-digest-v2-technical-spec.md  2026-04-09-ui-design-guidelines.md  2026-04-10-product-requirements.md  (+10 more)
docs/ui-design/: design-guide.md
frontend/: Dockerfile
frontend/src/: App.tsx  index.css
ui_prototype/dailybrief/: code.html
ui_prototype/interests/: code.html
ui_prototype/settings/: code.html
ui_prototype/sources/: code.html
(+22 files in other folders)
