[project]
name = "mindflow-backend"
version = "0.1.0"
description = "MindFlow FastAPI backend"
authors = [{ name = "MindFlow contributors" }]
requires-python = ">=3.11,<3.12"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
fastapi = "0.109.2"
uvicorn = { version = "0.27.1", extras = ["standard"] }
pydantic = "2.6.1"
python-multipart = "0.0.9"
apscheduler = "3.10.4"
httpx = "0.27.0"
openai = "1.12.0"
python-dotenv = "1.0.1"
numpy = "1.26.4"
greenlet = ">=3.4.0,<4.0.0"
psycopg2-binary = ">=2.9.9,<3.0.0"
asyncpg = ">=0.29.0,<1.0.0"
alembic = ">=1.13.0,<2.0.0"
sqlalchemy = { version = ">=2.0.25,<3.0.0", extras = ["asyncio"] }
pgvector = ">=0.2.0,<1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
