[project]
name = "mindflow-backend"
version = "0.1.0"
description = "MindFlow FastAPI backend"
authors = [{ name = "MindFlow contributors" }]
requires-python = ">=3.11,<3.12"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
fastapi = "0.136.0"
uvicorn = {version = "0.46.0", extras = ["standard"]}
pydantic = "2.13.3"
python-multipart = "0.0.26"
apscheduler = "3.11.2"
httpx = "0.28.1"
openai = "2.32.0"
python-dotenv = "1.2.2"
numpy = "2.4.4"
greenlet = ">=3.4.0,<4.0.0"
psycopg2-binary = ">=2.9.9,<3.0.0"
asyncpg = ">=0.29.0,<1.0.0"
alembic = ">=1.13.0,<2.0.0"
sqlalchemy = { version = ">=2.0.25,<3.0.0", extras = ["asyncio"] }
pgvector = ">=0.2.0,<1.0.0"
beautifulsoup4 = "^4.14.3"
markdownify = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
